src/gwt/public/games/games.css
/* ... */
.gameHeaderPanel .FindGame {
  position: absolute;
  top: 5px;
  left: 305px;
}

.gameHeaderPanel .FindGame .Title,
.gameHeaderPanel .Search .Title {
  font-family: Arial, Helvetica, sans-serif;
  width: 120px;
  margin-bottom: 3px;
}

.gameHeaderPanel .FindGame select {
  width: 160px;
}

.gameHeaderPanel .Search {
  position: absolute;
  top: 5px;
  left: 470px;
}

.gameHeaderPanel .Search input {
  width: 150px;
}

.gameHeaderPanel .Search .GoButton {
  position: absolute;
  bottom: 1px;
  left: 160px;
}

.gameHeaderPanel .GenreLinks {
  width: 100%;
  text-align: center;
}

.gameHeaderPanel .Title, .gameHeaderPanel a, .gameHeaderPanel .CreateTip, .gameHeaderPanel .DevTip {
  color: #B4DDF9;
  font-size: 12px;
}

.gameHeaderPanel .GenreLinks a {
  margin: 0 5px 0 5px;
}

.gameHeaderPanel .CreateTip {
  position: absolute;
  top: 10px;
  left: 310px;
  width: 260px;
}

.gameHeaderPanel .CreateTip, .gameHeaderPanel .DevTip {
  text-align: center;
}

.gameHeaderPanel .orangeButton {
  position: absolute;
  top: 10px;
  left: 580px;
}

/* ------------------------------------
   CreateGamePanel
-------------------------------------*/

.createGame .Intro {
  font-size: 16px;
  width: 600px;
  padding-bottom: 10px;
}

/* ------------------------------------
   EditGamePanel
-------------------------------------*/

.editGame .Header {
  width: 100%;
}

.editGame .Header .Title, .editGame .Tip, .editGame .Tip a {
  color: #154D72;
}

.editGame .Title {
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 24px;
  white-space: nowrap;
}

.editGame .Tip {
  font-size: 13px;
}

.baseEditor .mediaBox .gwt-Image, .baseEditor .codeBox .Code {
  margin: 0px;
  padding: 0px 0px 5px 0px;
}

.baseEditor .Label .tipLabel {
  width: 130px;
}

.gameItemEditor {
  width: 100%;
}

.gameItemEditor .Row {
  border-bottom: 1px solid #000000;
}

.gameItemEditor .AltRow {
  background: #DDDDDD;
}

.gameItemEditor .Header {
  font-weight: bold;
}

/* ------------------------------------
   EditArcadePanel
-------------------------------------*/

.editArcadePanel .Pages {
  padding: 10px;
}

.editArcadePanel .moveUp {
  background-image: url(/images/ui/move_up.png);
  width: 13px;
  height: 13px;
}

.editArcadePanel .moveDown {
  background-image: url(/images/ui/move_down.png);
  width: 13px;
  height: 13px;
}

.editArcadePanel .gameList,
.editArcadePanel .gameList .Games .Header .TopLeft,
.editArcadePanel .gameList .Games .Header .TopRight {
  background-color: white;
}

.editArcadePanel .gameList .Games {
  margin: 0;
}

.editArcadePanel .gameList .Games .Titles div {
  text-decoration: none;
}

.editArcadePanel .gameList .PlayButtons {
  text-align: left;
  color: black;
  font-size: 10px;
}

.editArcadePanel .gameList .PlayButtons table.MoveButtons {
  width: 60px;
}

.editArcadePanel .gameList .Tip {
  padding-top: 10px;
  padding-bottom: 10px;
  color: black;
  font-size: 14px;
}

/* ------------------------------------
   GameBitsPanel
-------------------------------------*/

.gameBits .Title {
  padding-top: 10px;
  font-weight: bold;
  color: #5F96AC;
}

.gameBits .Label {
  padding-right: 5px;
}

/* ------------------------------------
   FBArcadePanel
-------------------------------------*/

.fbarcade {
  background: #FFFFFF;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12px;
  color: black;
  width: 100%;
  height: 543px;
}

.fbarcade .fbfeaturedGame {
  left: 215px;
  top: 20px;
}

.fbarcade .TopGames {
  top: 93px;
}

/* ------------------------------------
   FBArcadePanel - top 10 games
-------------------------------------*/

.fbarcade .TopGames {
  width: 200px;
  position: absolute;
  left: 0px;
}

.fbarcade .TopGames .title .left {
  background: url(/images/facebook/title_bar_left.png) no-repeat;
  width: 11px;
  height: 30px;
}

.fbarcade .TopGames .title .right {
  background: url(/images/facebook/title_bar_right.png) no-repeat;
  width: 11px;
  height: 30px;
}

.fbarcade .TopGames .title .center {
  background: url(/images/facebook/title_bar_middle.png) repeat-x;
  height: 30px;
  vertical-align: middle;
  text-align: center;
  font-size: 18px;
  font-weight: bold;
  width: 178px;
  color: #FFFFFF;
}

.fbarcade .TopGames .TopGameWidget {
  border-right: solid #94a3c4 1px;
  border-bottom: solid #94a3c4 1px;
  background-color: white;
  width: 200px;
  height: 45px;
}

.fbarcade .TopGames .Number {
  background: url(/images/facebook/top_games_num_bg.png) repeat-x top center;
  color: #3b5998;
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  width: 25px;
  height: 30px;
  float: left;
  border-left: solid #94a3c4 1px;
  border-right: solid #94a3c4 1px;
  padding-top: 15px;
}

.fbarcade .TopGames .thumbBox {
  float: left;
  width: 40px;
  height: 31px;
  text-align: center;
  padding: 7px;
}

.fbarcade .TopGames .Name {
  width: 110px;
  color: #1c5988;
  font-size: 12px;
  font-weight: bold;
  white-space: nowrap;
  overflow: hidden;
}

.fbarcade .TopGames .Name .actionLabel {
  text-decoration: none;
}

.fbarcade .TopGames .TopGameWidget:hover .Name .actionLabel {
  text-decoration: underline;
}

/* ------------------------------------
   FBFeaturedGamePanel
-------------------------------------*/

.fbfeaturedGame {
  height: 197px;
  width: 545px;
  font-family: Arial, Helvetica, sans-serif;
  color: #FFFFFF;
  font-size: 13px;
}

.fbfeaturedGame .bg_top_row {
  height: 30px;
  top: 0px;
}

.fbfeaturedGame .bg_mid_row {
  height: 156px;
  top: 30px;
}

.fbfeaturedGame .bg_bot_row {
  height: 11px;
  bottom: 0px;
}

.fbfeaturedGame .bg_left_col {
  width: 11px;
  left: 0px;
}

.fbfeaturedGame .bg_right_col {
  width: 11px;
  right: 0px;
}

.fbfeaturedGame .bg_mid_col {
  width: 523px;
  left: 11px;
}

.fbfeaturedGame .bg_top_left {
  background: url(/images/facebook/title_bar_left.png) no-repeat;
  border: 0px;
}
/* ... */

